language/move-lang/tests/move_check/parser/module_struct_after_func.exp
error: 

   ┌── tests/move_check/parser/module_struct_after_func.move:4:5 ───
   │
 4 │     struct S {}
   │     ^^^^^^ Unexpected token: 'struct'
   ·
 4 │     struct S {}
   │     ------ Expected: a name value
   │

